# socok8s

./: .ansible-lint  .gitignore  .gitmodules  .mergify.yml  .travis.yml  Jenkinsfile  Jenkinsfile.integration  Jenkinsfile.lint  Makefile  README.md  README.rst  _parsing.m4  _parsing.sh  _run.sh  common-vars.yml  deployer.sh  log-parser-plugin-rules.txt  run.m4  run.sh  setup.cfg  setup.py  socok8s.m4  socok8s.sh  tox.ini
1_ses_node_on_openstack/: create.sh  delete.sh
2_deploy_ses_aio/: get-ses-data.yml  play.yml  prepare-ses-ansible.yml  run.sh  ses-install.yml  set-user-variables.yml
3_caasp_nodes_on_openstack_heat/: caasp-stack.yaml  caasp-worker-floatingip.yaml  create.sh  delete.sh
3_caasp_nodes_on_openstack_manually/: create.sh  delete.sh
4_osh_node_on_openstack/: create.sh  delete.sh
5_automate_caasp_enroll/: play.yml
6_preflight_checks/: checks.yml
7_deploy_osh/: play.yml
8_deploy_airship/: play.yml  todo.txt
Docs/: caasp
argocd-install/: cleanup_known_hosts.yaml  first-app--the-auto-deployer.yaml  kustomization.yaml
auto-deploy/: Chart.yaml  values.yaml
doc/: requirements.txt  spelling-requirements.txt
examples/: ses_config.yml  user_variables.yml
files/: .gitignore  caasp-openstack  caasp-stack-master.yaml  caasp-stack-worker.yaml  caasp-stack.yaml  fancyyaml.py  setup-ssh-agent-for-caasp4-ci.py  velum-bootstrap.tar.xz  volume-with-attachment.yaml
heat-templates/: openstack-network.yml  tempest-network.yml
images/: airflow_Dockerfile.sle_15sp1  armada_Dockerfile.sle_15sp1  deckhand_Dockerfile.sle_15sp1  pegleg_Dockerfile.sle_15sp1  (+1 more)
(+809 files in other folders)
