[metadata]
name = socok8s
summary = SUSE OpenStack Cloud on K8s
description-file =
    README.rst
author = SUSE OpenStack Cloud developers
author-email = cloud-devel@suse.de
home-page = https://github.com/SUSE-Cloud/socok8s
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html
